--- a/cupcakes/templates/use.html
+++ b/cupcakes/templates/use.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 		<h2>Use our ads</h2>
+		<p class="fullWidthp">The Supreme Court's ruling in the Citizens United case makes it much easier for corporations, labor unions and non-profits to run ads to influence elections. Keeping track of all the advertising will be a huge task. Sunlight's Campaign Ad Monitor gives readers and visitors of your website the opportunity to report on campaign ads they see. You can use the banner ads below on your website–just right click on the one you want to copy or save it. Each ad links to the data entry form--and makes your site part of our Campaign Ad Monitor network.</p>
 		<span class="tip">Right click on each ad to copy or to save.</span>
 		<ul id="ads">
 		    <li>
