--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -10,6 +10,15 @@
 		<!--[if IE 7]><link rel="stylesheet" href="/static/styles/buggy7.css" type="text/css" media="screen" /><![endif]-->
 	</head>
 	<body class="{% block bodyclass %}home{% endblock %}">
+	    <div id="navWrapper">
+	        <div id="nav">
+	            <ul>
+			        <li id="about"><a href="/about">About</a></li>
+			        <li><a href="/use">Put Campaign Ad Monitor on your Web site</a></li>
+			    </ul> 
+			    <div class="clear"></div>
+	        </div>    
+	    </div>    
 		<div id="headerWrapper">
 			<div id="header">
 				<h1><a href="/"><small>Sunlight</small><big>Campaign Ad Monitor</big></a></h1>
@@ -25,14 +34,7 @@
 			</div>
 			<div id="pageMain">
 				{% block content %}{% endblock %}
-				<div class="clear"></div>
-				<div id="footerNav">
-				    <ul>
-				        <li id="about"><a href="/about">About</a></li>
-				        <li><a href="/use">Use our ads</a></li>
-				    </ul> 
-				    <div class="clear"></div>   
-				</div>    
+				<div class="clear"></div>   
 				<div id="footer">
 					<a id="sunlight" href="http://www.sunlightfoundation.com">Sunlight Foundation</a>
 					<p>Founded in 2006, the Sunlight Foundation is a non-partisan non-profit that uses cutting-edge technology and ideas to make government transparent and accountable. Visit <a href="http://www.sunligtfoundation.com">SunlightFoundation.com</a> to learn more.</p>
