styling changes to top nav

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -14,7 +14,7 @@
 	        <div id="nav">
 	            <ul>
 			        <li id="about"><a href="/about">About</a></li>
-			        <li><a href="/use">Put Campaign Ad Monitor on your Web site</a></li>
+			        <li><a href="/use">Put CAM on your Web site</a></li>
 			    </ul> 
 			    <div class="clear"></div>
 	        </div>    
