--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -143,12 +143,12 @@ ul#ads h3 { display: block; float: none;}
 ul#ads li { float: left; margin: 0 50px 30px 0;}
 
 #navWrapper { background-color: #1d1915; border-bottom: 1px solid #21201d;}
-#nav { background-color: #1d1915; height: 30px; margin: 0 auto; width: 940px; padding: 0 10px; font-size: 95%; font-family: Georgia, "Times New Roman", Times, serif;}
+#nav { background-color: #1d1915; height: 30px; margin: 0 auto; width: 940px; padding: 0 10px; font-size: 95%; }
 #nav ul { float: right; }
-#nav li { float: left; margin-top: 5px;}
-#nav li a { text-decoration: none; color: #bbb9b7;}
+#nav li { float: left; margin-top: 8px;}
+#nav li a { text-decoration: none; color: #bbb9b7; text-decoration: underline; text-transform: uppercase; display: block; line-height: 15px;}
 #nav li a:hover { color: #8d1d1b;}
-#nav li#about { margin-right: 40px; }
+#nav li#about { margin-right: 40px; padding-right: 40px; border-right: 1px solid #3b3a36;}
 
 div#footer { background: url(../images/footer.jpg) top center no-repeat; height: 81px; padding: 30px 60px 0px; margin-bottom: 40px; margin-top: 70px;}
 div#footer a { color: #c5c4c3;}
