add hat and fix wording

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -49,5 +49,6 @@
 			});
 		</script>
 		{% block scripts %}{% endblock %}
+		<script src="http://services.sunlightlabs.com/brandingbar/hat_js/sunlightcam/" type="text/javascript"></script>
 	</body>
 </html>
