add internet mediatype and move link

--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -39,7 +39,6 @@ input, textarea, select { text-transform: capitalize; }
 input#id_search { background: url(../images/bg_search.png) top left no-repeat; width: 183px; height: 22px; border: none; margin-right: 10px; color: #a19995; font-size: 110%; font-family: Georgia, "Times New Roman", Times, serif;}
 
 input#tv_channel_other { display: none; margin-top: 15px; }
-li#internet_link_container { display: none; }
 
 div#feature { background: url(../images/feature_text.png) top center no-repeat; width: 573px; height: 109px; text-indent: -9999em; display: block; margin: 140px auto;}
 div#pageMain { width: 960px; margin: 0 auto; padding: 0 10px;}
@@ -109,6 +108,7 @@ button.searchBtn { width: 45px; height: 31px; background: url(../images/button_g
 fieldset.final { display: none; }
 fieldset.radio { display: none; }
 fieldset.television { display: none; }
+fieldset.internet { display: none; }
 
 form#reportAd select#dt_month { width: 100px; }
 form#reportAd select#dt_day { width: 55px; }
