add google analytics code

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -8,6 +8,17 @@
 		<link rel="stylesheet" href="/static/styles/main.css" type="text/css" media="screen" />
 		<!--[if IE 6]><link rel="stylesheet" href="/static/styles/buggy.css" type="text/css" media="screen" /><![endif]-->
 		<!--[if IE 7]><link rel="stylesheet" href="/static/styles/buggy7.css" type="text/css" media="screen" /><![endif]-->
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-1265484-65']);
+			_gaq.push(['_setDomainName', '.sunlightcam.com']);
+			_gaq.push(['_trackPageview']);
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</head>
 	<body class="{% block bodyclass %}home{% endblock %}">
 	    <div id="navWrapper">
