--- a/cupcakes/templates/use.html
+++ b/cupcakes/templates/use.html
@@ -1,36 +1,39 @@
 {% extends "base.html" %}
 
-{% block bodyclass %}about{% endblock %}
+{% block bodyclass %}share{% endblock %}
 
 {% block content %}
 
-		<h2>Share CAM</h2>
-		<p class="fullWidthp">The Supreme Court's ruling in the Citizens United case makes it much easier for corporations, labor unions and non-profits to run ads to influence elections. Keeping track of all the advertising will be a huge task. Sunlight's Campaign Ad Monitor gives readers and visitors of your website the opportunity to report on campaign ads they see. You can use the banner ads below on your website–just right click on the one you want to copy or save it. Each ad links to the data entry form--and makes your site part of our Campaign Ad Monitor network.</p>
-		<span class="tip">Right click on each ad to copy or to save.</span>
+		<h2>Share Sunlight CAM on Your Website</h2>
+		<p class="fullWidthp">Use the ads below on your website or blog to tell people about Sunlight CAM, and how they can help watchdog special interests. Simply choose the best graphic size for your site, and copy the embed code to use it.</p>
+		<span class="tip">For more information on how to become a Sunlight CAM partner, <a href="/contact">click here</a>.</span>
 		<ul id="ads">
 		    <li>
                 <h3>728x90</h3>
-                <img alt="728x90 ad" src="static/images/cam_728x90.jpg" />
-				<span class="embed">
+                <span class="embed">
 					<a href="http://assets.sunlightfoundation.com/sunlightcam/ads/cam_728x90.jpg">Get embed code</a>
 					<input type="text" value="" />
 				</span>
+				<div class="clear"></div>
+                <img alt="728x90 ad" src="static/images/cam_728x90.jpg" />
             </li>
             <li class="clear">
                 <h3>160x600</h3>
-                <img alt="160x600 ad" src="static/images/cam_160x600_2.jpg" />
-				<span class="embed">
+                <span class="embed">
 					<a href="http://assets.sunlightfoundation.com/sunlightcam/ads/cam_160x600_2.jpg">Get embed code</a>
 					<input type="text" value="" />
 				</span>
+				<div class="clear"></div>
+                <img alt="160x600 ad" src="static/images/cam_160x600_2.jpg" />
             </li>
             <li>
                 <h3>300x250</h3>
-                <img alt="300x250 ad" src="static/images/cam_300x250.jpg" />
-				<span class="embed">
+                <span class="embed">
 					<a href="http://assets.sunlightfoundation.com/sunlightcam/ads/cam_300x250.jpg">Get embed code</a>
 					<input type="text" value="" />
 				</span>
+				<div class="clear"></div>
+                <img alt="300x250 ad" src="static/images/cam_300x250.jpg" />
             </li>
         </ul>
 	
