--- a/cupcakes/templates/about.html
+++ b/cupcakes/templates/about.html
@@ -6,7 +6,25 @@
 
 	<div id="ltColumn">
 		<h2>About</h2>
-		<p>Tracking political advertising in the wake of the Supreme Court's Citizen United ruling—which allows corporations and labor unions to spend unlimited amounts to elect or defeat federal, state and even local candidates—will be more challenging than ever. To help media organizations, civic groups, academics and others following the 2010 mid-term elections, the Sunlight Foundation is offering Sunlight Campaign Ad Monitor, or Sunlight CAM. Sunlight Cam is a gadget that, once installed, allows visitors to any news website, blog, or the home page of a neighborhood association to report information on ads they see. Click the Sunlight CAM gadget, enter a zip code, find the station (radio, television or cable) that ran the ad, enter some basic information—which politician was mentioned, what was said, was a sponsor named—and click submit. The information entered will be publicly available from our online database, allowing voters to help keep track of who’s trying to influence their choices in the 2010 elections, and giving organizations a great way to engage their online visitors.</p>
+		<p>Sunlight Campaign Ad Monitor (Sunlight CAM) allows anyone to report information on the political advertising they see on TV, hear on the radio or view online.</p>
+        <h3>Why this matters</h3>
+        <p>Did you know that special interests can now spend an unlimited amount of cash to try to influence your vote with TV, radio and Internet advertising?</p>
+        <p>That’s because in January 2010, the Supreme Court changed the landscape of money and politics. <a href="http://blog.sunlightfoundation.com/2010/01/21/ citizens_united_transparenc/">To briefly recap</a>, in the Citizens United v. FEC case, the Supreme Court decided that corporations and unions may spend unlimited amounts of money on right up until Election Day, so long as they do not coordinate with candidates. The Federal Election Commission has yet to adopt final rules that will allow it to track this flood of money; that’s why we need your help.</p>
+        <p>We created Sunlight CAM to shine a light on who is buying your time. But we need your eyes and ears. Join us and become a Sunlight Campaign Ad Monitor to report on who buys ad time in support of or against candidates running for elected office or even issues on the ballot.</p>
+        <h3>How to use Sunlight CAM</h3>
+        <p>When you see a political ad on TV, hear one on the radio or view one online, visit Sunlight CAM to log it and tell us more about it.</p>
+        <p>Start by entering your zip code on the homepage and note what type of ad you are reporting (radio, TV or Internet). Next, enter some additional information, such as the media outlet that ran the ad, which politician was mentioned, what was said and if the ad included a “paid for by” line. Then just click submit.</p>
+        <p>Your anonymous submission will be part of the Sunlight CAM database. Anyone can view this information online or download the data to keep tabs on who is paying for political ads in your hometown and across the country.</p>
+        <p>You can also flag inaccurate information or abusive or offensive posts. If you see any such information, click the flag button in the View Reports page and we’ll take a look.</p>
+        <p>Be sure to bookmark Sunlight CAM and check back frequently to share any new ads you see or hear as Election Day approaches.</p>
+
+        <h3>Like Sunlight CAM? Sign up here to hear about other Sunlight projects.</h3>
+        <form action="/" method="post">
+            <input id="id_signup" type="text" value="Enter Your Email Address" name="q"/>
+			<button class="signupBtn" type="submit">
+				<span>Sign Up</span>
+			</button>
+        </form>
 		
 	</div>
 
