--- a/cupcakes/templates/contact.html
+++ b/cupcakes/templates/contact.html
@@ -5,6 +5,9 @@
 {% block content %}
 
 	<div id="ltColumn">
+	    <h2>Contact Us</h2>
+		<p>Have a question or comment about the site? Submit it below.</p>
+		<p>If you need help or want more information about Sunlight CAM, please also contact us using the form below.</p>
 		
 		{% with messages = get_flashed_messages() %}
 		  {% if messages %}
@@ -31,13 +34,17 @@
 		    </ul>
 		{% endif %}
 		
-		<form action="/contact" method="post">
+		<form action="/contact" id="contact" method="post">
 			<ul>
 				<li>{{ form.name.label }} {{ form.name }}</li>
 				<li>{{ form.email.label }} {{ form.email }}</li>
 				<li>{{ form.comments.label }} {{ form.comments }}</li>
+				<li>
+				    <button class="submitBtn" type="submit">
+						<span>Submit</span>
+					</button>
+				</li>
 			</ul>
-			<input type="submit">
 		</form>
 		
 	</div>
