--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -4,6 +4,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
+		<meta property="og:title" content="Sunlight Campaign Ad Monitor"/>
+		<meta property="og:description" content=""/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:image" content=""/>
+		<meta property="og:url" content="http://sunlightcam.com"/>
+		<meta property="og:site_name" content="Sunlight CAM"/>
 		<title>Sunlight Campaign Ad Monitor</title>
 		<link rel="stylesheet" href="/static/styles/main.css" type="text/css" media="screen" />
 		<!--[if IE 6]><link rel="stylesheet" href="/static/styles/buggy.css" type="text/css" media="screen" /><![endif]-->
@@ -57,7 +63,23 @@
 		<script src="/static/scripts/jquery.placehold-0.2.min.js"></script>
 		<script>
 			$().ready(function() {
+				var signup = $("#id_signup");
 				$("#id_search").placehold();
+				signup.placehold();
+				$('button.signupBtn').click(function() {
+
+					signup.attr('disabled', 'disabled');
+					$(this).hide().after('<span>Just a moment...</span>');
+
+					var data = {email: signup.val()};
+					$.post('/subscribe', data, function(data) {
+						$('#signup_form').hide();
+						$('#signup_message').html(data.message).show();
+					});
+
+					return false;
+
+				});
 			});
 		</script>
 		{% block scripts %}{% endblock %}
