initial description for Facebook and tweet for Twitter

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="keywords" content="" />
-		<meta name="description" content="" />
-		<meta property="og:title" content="Sunlight Campaign Ad Monitor"/>
-		<meta property="og:description" content=""/>
+		<meta name="description" content="In January 2010, the Supreme Court changed the landscape of money and politics. In the Citizens United v. FEC case, the Supreme Court decided that corporations and unions may spend unlimited amounts of money on electioneering communications like TV and radio ads. The Federal Election Commission has yet to adopt final rules that will allow it to track this flood of money; that¹s why we need your help. We¹ve created Sunlight CAM to shine a light on who is buying your time. But we need your eyes and ears. Join us and become a Sunlight Campaign Ad Monitor to report on who buys ad time in support of or against candidates running for elected office or even issues on the ballot." />
+		<meta property="og:title" content="Follow the money this election season. Join me as a Sunlight Campaign Ad Monitor."/>
+		<meta property="og:description" content="In January 2010, the Supreme Court changed the landscape of money and politics. In the Citizens United v. FEC case, the Supreme Court decided that corporations and unions may spend unlimited amounts of money on electioneering communications like TV and radio ads. The Federal Election Commission has yet to adopt final rules that will allow it to track this flood of money; that¹s why we need your help. We¹ve created Sunlight CAM to shine a light on who is buying your time. But we need your eyes and ears. Join us and become a Sunlight Campaign Ad Monitor to report on who buys ad time in support of or against candidates running for elected office or even issues on the ballot."/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content=""/>
 		<meta property="og:url" content="http://sunlightcam.com"/>
