--- a/cupcakes/templates/thanks.html
+++ b/cupcakes/templates/thanks.html
@@ -17,7 +17,7 @@
 			<h3>Share Sunlight CAM</h3>
 			<ul class="share">
 				<li>
-					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sunlightcam.com" data-text="I helped track corporate spending on campaign ads. You can too!" data-count="vertical" data-via="sunfoundation">Tweet</a>
+					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sunlightcam.com" data-text="Follow the money this #election season. Join me as a Sunlight Campaign Ad Monitor." data-count="vertical" data-via="sunfoundation">Tweet</a>
 					<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 				</li>
 				<li>
