--- a/cupcakes/templates/index.html
+++ b/cupcakes/templates/index.html
@@ -3,6 +3,16 @@
 {% block feature %}
 	<div id="feature">
 		<p>Be a campaign monitor, report political ads you've seen recently</p>
+		<dl>
+		    <dt>Identify</dt>
+		    <dd>Spot a political ad</dd>
+		    
+		    <dt>Watchdog</dt>
+		    <dd>Tell us about it</dd>
+		    
+		    <dt>Share</dt>
+		    <dd>Let others know what you find</dd>
+		</dl>    
 	</div>
 {% endblock %}
 
